--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#server.port=8080
 
+# \u4E2D\u6587\u4E71\u7801
+#server.servlet.encoding.force-response=true
+#server.servlet.encoding.force=true
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.enabled=true
+#server.tomcat.uri-encoding=UTF-8
+
+# \u5728\u5F53\u524D\u7248\u672C\u4E0B\uFF0C\u4EE5\u8FD9\u79CD\u914D\u7F6E\u65B9\u5F0F\u6765\u8FDB\u884C\u5C5E\u6027\u6CE8\u5165\uFF0C\u4F1A\u5F15\u8D77\u4E2D\u6587\u4E71\u7801\u3002
+# \u4F46\u662F\u7528yaml\u6587\u4EF6\u683C\u5F0F\uFF0C\u6CA1\u6709\u4E0A\u9762\u7684\u914D\u7F6E\uFF0C\u4E5F\u4E0D\u4F1A\u51FA\u73B0\u4E2D\u6587\u4E71\u7801
+#person.id=1
+#person.name=tom
+#person.hobby=\u5403\u996D,\u7761\u89C9,\u6253\u8C46\u8C46
+#person.family=father,mother
+#person.map.k1=v1
+#person.map.k2=v2
+#person.pet.type=dog
+#person.pet.name=\u65FA\u8D22
