--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -20,3 +20,20 @@
 
 simplebean.id=1
 simplebean.name=\u81EA\u5B9A\u4E49starter
+
+# MySQL\u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootdemo?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=345mjt
+
+# \u63A7\u5236\u53F0\u4E2D\u67E5\u8BE2\u7684Comment\u7684aId\u5C5E\u6027\u503C\u4E3Anull\uFF0C\u6CA1\u6709\u6620\u5C04\u6210\u529F\u3002\u8FD9\u662F\u56E0\u4E3A\u7F16\u5199\u7684\u5B9E\u4F53\u7C7BComment
+#\u4E2D\u4F7F\u7528\u4E86\u9A7C\u5CF0\u547D\u540D\u65B9\u5F0F\u5C06t_comment\u8868\u4E2D\u7684a_id\u5B57\u6BB5\u8BBE\u8BA1\u6210\u4E86aId\u5C5E\u6027\uFF0C\u6240\u4EE5\u65E0\u6CD5\u6B63\u786E\u6620\u5C04\u67E5\u8BE2\u7ED3\u679C\u3002
+#\u4E3A\u4E86\u89E3\u51B3\u4E0A\u8FF0\u7531\u4E8E\u9A7C\u5CF0\u547D\u540D\u65B9\u5F0F\u9020\u6210\u7684\u8868\u5B57\u6BB5\u503C\u65E0\u6CD5\u6B63\u786E\u6620\u5C04\u5230\u7C7B\u5C5E\u6027\u7684\u60C5\u51B5\uFF0C\u53EF\u4EE5\u5728Spring Boot\u5168
+#\u5C40\u914D\u7F6E\u6587\u4EF6application.properties\u4E2D\u6DFB\u52A0\u5F00\u542F\u9A7C\u5CF0\u547D\u540D\u5339\u914D\u6620\u5C04\u914D\u7F6E
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#\u914D\u7F6EMyBatis\u7684xml\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
+mybatis.mapper-locations=classpath:mapper/*.xml
+#\u914D\u7F6EXML\u6620\u5C04\u6587\u4EF6\u4E2D\u6307\u5B9A\u7684\u5B9E\u4F53\u7C7B\u522B\u540D\u8DEF\u5F84
+mybatis.type-aliases-package=com.projectdemo.springbootdemo.entity
+
