改正sql链接密码

--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -24,7 +24,7 @@ simplebean.name=\u81EA\u5B9A\u4E49starter
 # MySQL\u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdemo?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=345mjt
+spring.datasource.password=root
 
 # \u63A7\u5236\u53F0\u4E2D\u67E5\u8BE2\u7684Comment\u7684aId\u5C5E\u6027\u503C\u4E3Anull\uFF0C\u6CA1\u6709\u6620\u5C04\u6210\u529F\u3002\u8FD9\u662F\u56E0\u4E3A\u7F16\u5199\u7684\u5B9E\u4F53\u7C7BComment
 #\u4E2D\u4F7F\u7528\u4E86\u9A7C\u5CF0\u547D\u540D\u65B9\u5F0F\u5C06t_comment\u8868\u4E2D\u7684a_id\u5B57\u6BB5\u8BBE\u8BA1\u6210\u4E86aId\u5C5E\u6027\uFF0C\u6240\u4EE5\u65E0\u6CD5\u6B63\u786E\u6620\u5C04\u67E5\u8BE2\u7ED3\u679C\u3002
