--- a/springbootdemo/pom.xml
+++ b/springbootdemo/pom.xml
@@ -108,6 +108,7 @@
             <version>5.2.3</version>
         </dependency>
 
+        <!--引入apache工具类-->
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -115,7 +116,7 @@
             <version>3.9</version>
         </dependency>
 
-<!--log4j的日志-->
+        <!--引入log4j的日志-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
@@ -140,6 +141,15 @@
             <version>2.18.0</version>
             <!--			<scope>compile</scope>-->
         </dependency>
+
+<!--        引入 easyexcel依赖-->
+        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
 
 
